[gd_scene load_steps=9 format=2]

[ext_resource path="res://text_in_bomb.gd" type="Script" id=1]
[ext_resource path="res://resources/images/long_bomb3.png" type="Texture" id=2]
[ext_resource path="res://resources/images/long_bomb1.png" type="Texture" id=3]
[ext_resource path="res://resources/images/long_bomb2.png" type="Texture" id=4]
[ext_resource path="res://scripts/list_bomb.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=5]
radius = 39.0
height = 90.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://resources/fonts/GrapeNuts-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[node name="list_bomb" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="short_bomb" type="Sprite" parent="."]
position = Vector2( 1, -59 )
scale = Vector2( 0.39238, 0.367878 )
texture = ExtResource( 3 )

[node name="medium_bomb" type="Sprite" parent="."]
position = Vector2( 2.18749, -11 )
scale = Vector2( 0.357036, 0.363636 )
texture = ExtResource( 4 )

[node name="last_bomb" type="Sprite" parent="."]
position = Vector2( 1.5, 7.49999 )
scale = Vector2( 0.35625, 0.337621 )
texture = ExtResource( 2 )

[node name="list_bomb_collision" type="CollisionShape2D" parent="."]
position = Vector2( 2, -39 )
shape = SubResource( 5 )
one_way_collision = true

[node name="words_on_bomb" type="Label" parent="."]
margin_left = -68.0
margin_top = 6.0
margin_right = 68.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "TESTING"
align = 1
script = ExtResource( 1 )

[node name="words_on_bomb2" type="Label" parent="."]
visible = false
margin_left = -68.0
margin_top = -29.0
margin_right = 68.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 23, 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "TESTING"
align = 1
script = ExtResource( 1 )

[node name="words_on_bomb3" type="Label" parent="."]
visible = false
margin_left = -65.0
margin_top = -64.0
margin_right = 71.0
margin_bottom = -27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "TESTING"
align = 1
script = ExtResource( 1 )
